Bundled Themes: Update calendar widget styles for 5.4 markup to fix the alignment of a single month link.
Follow-up to [47405].

Props sabernhardt.
Reviewed by ianbelanger, SergeyBiryukov.
Merges [47444] to the 5.4 branch.
Fixes #49549.
Built from https://develop.svn.wordpress.org/branches/5.4@47445


git-svn-id: http://core.svn.wordpress.org/branches/5.4@47232 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyeleven/style.css
+++ b/wp-content/themes/twentyeleven/style.css
@@ -1964,6 +1964,10 @@ section.ephemera .entry-title a span {
 	display: table-cell;
 	text-align: center;
 }
+.widget_calendar .wp-calendar-nav-prev,
+.widget_calendar .wp-calendar-nav-next {
+	width: 40%;
+}
 
 /* Text Widget */
 .widget_text ul,
