--- a/wp-content/themes/twentysixteen/style.css
+++ b/wp-content/themes/twentysixteen/style.css
@@ -1449,8 +1449,9 @@ blockquote:after,
 	display: table-cell;
 }
 
-.widget_calendar .wp-calendar-nav .pad {
-	width: 15%;
+.widget_calendar .wp-calendar-nav-prev,
+.widget_calendar .wp-calendar-nav-next {
+	width: 40%;
 }
 
 .widget_calendar td,
